--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "fante-notifier",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "build": "docker build -t fonte-notifier ."
+    "offline": "serverless offline"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "handlebars": "^4.7.7",
-    "ioredis": "^4.17.3",
-    "nodemailer": "^6.4.16"
+    "nodemailer": "^6.4.16",
+    "pocket-api": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.76",
+    "aws-sdk": "2.880.0",
+    "serverless-offline": "^7.0.0",
+    "serverless-webpack": "^5.5.0",
+    "ts-loader": "^9.2.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.1"
   }
 }
