Added terraform init step

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           terraform_version: 0.15.3
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - run: terraform init
+        working-directory: ./infra
       - run: terraform apply -auto-approve
         working-directory: ./infra
         env:
