--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,6 +21,9 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - run: terraform init
         working-directory: ./infra
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - run: terraform apply -auto-approve
         working-directory: ./infra
         env:
