--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,19 @@ custom:
         - aws-sdk
 
 functions:
+  sendFanteEmail:
+    handler: src/handlers/email.sendFanteEmail
+    events:
+      - schedule: cron(0 19 * * ? *)
+    environment:
+      HIGHLIGHTS_TABLE_ARN: ${self:custom.dynamodb.highlightsTable}
+      MAIL_HOST: ${env:MAIL_HOST}
+      MAIL_PORT: ${env:MAIL_PORT}
+      MAIL_USER: ${env:MAIL_USER}
+      MAIL_PASS: ${env:MAIL_PASS}
+      MAIL_FROM: ${env:MAIL_FROM}
+      MAIL_TO: ${env:MAIL_TO}
+
   importHighlights:
     handler: src/handlers/pocket.importHighlights
     events:
