--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   "dependencies": {
     "handlebars": "^4.7.7",
     "nodemailer": "^6.4.16",
+    "pino": "^7.3.0",
+    "pino-lambda": "^3.0.0",
     "pocket-api": "^1.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.76",
     "@types/nodemailer": "^6.4.2",
-    "aws-sdk": "2.880.0",
+    "aws-sdk": "2.1001.0",
     "copy-webpack-plugin": "^9.0.0",
     "serverless-offline": "^7.0.0",
     "serverless-webpack": "^5.5.0",
     "ts-loader": "^9.2.2",
-    "typescript": "^4.2.4",
+    "typescript": "^4.5.2",
     "webpack": "^5.37.1"
   }
 }
